# ai-investment-agent

./: -  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FIX_VERIFICATION_COMPLETE.md  LICENSE  Makefile  README-1681-HK-2025-12-16.md  README-1681-HK-2025-12-17.md  README-1681-HK-2025-12-27.md  README-1681-HK-2025-12-28.md  README-1681-HK-2025-12-29.md  README-1681-HK-2026-01-01.md  README-7937-T-2026-01-03-TRANSPARENT.md  README-7937-T-2026-01-03-TRANSPARENT_article.md  README-8002-T-2025-12-28.md  README-8002-T-2025-12-29.md  README-8002-T-2026-01-01.md  README-9168-T-2026-01-03-TRANSPARENT.md  README-9168-T-2026-01-03-TRANSPARENT_article.md  README-9201-T-2025-12-20-Flash.md  README-9201-T-2025-12-20-Quick.md  README-9201-T-2025-12-20.md  README-EXAMPLE-ANALYSES.md  README-OGC-TO-2026-01-03-TRANSPARENT.md  README-PINFRA-MX-2025-12-28.md  README-PINFRA-MX-2025-12-29.md  README-PINFRA-MX-2026-01-01-TRANSPARENT-ARTICLE.md  README-PINFRA-MX-2026-01-01-TRANSPARENT.md  README.md  SECURITY.md  docker-compose.yml  inspect_trace.py  pre-commit-config.yaml  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  security.yml
config/: exchanges.json  mcp_servers.example.json
docs/: AGENTIC-AI-101.md  CODEBASE_MEMORY.md  FX_VERIFICATION_REPORT.md  GEMINI_FLASH_COMPATIBILITY.md  INDEX.md  MCP.md  ROADMAP_OPERATOR_WORKBENCH.md  RUNTIME_MODEL.md  SESSION_SUMMARY.md  STAGE1_UNIFIED_STORAGE_PLAN.md  TOKEN_EFFICIENCY_AND_OBSERVABILITY_AUDIT.md
evals/prompt_check_suites/: smoke.json  strict.json
examples/: analyze_single_ticker.sh  check_token_costs.py  portfolio-2026.csv  portfolio-2026.xlsx
prompts/: auditor.json  auditor.json.backup_20260113_204633  bear_researcher.json  bull_researcher.json  consultant.json  consultant.json.backup_20260113_204633  editor.json  foreign_language_analyst.json  fundamentals_analyst.json  fundamentals_analyst.json.backup_20260115_172019  junior_fundamentals_analyst.json  legal_counsel.json  macro_context_analyst.json  market_analyst.json  neutral_analyst.json  news_analyst.json  portfolio_manager.json  portfolio_manager.json.backup_20260113_204633  research_manager.json  risky_analyst.json  safe_analyst.json  sentiment_analyst.json  trader.json  valuation_calculator.json  value_trap_detector.json  writer.json
scripts/: SCRIPTS_QUICK_REFERENCE.md  check-environment.sh  dump-to-scratch.sh  filter_tickers.py  find_gems.py  mcp_smoke.py  portfolio_manager.py  prompt_manager.py  run-analysis.sh  run_ibkr_dashboard.sh  run_pipeline.sh  run_tickers.sh  run_tickers_loud.sh  run_tickers_quick.sh  run_tickers_verbose.sh  setup-github-secrets.sh  setup-terraform-backend.sh  terraform-ops.sh  ticker_scraper.py
src/: __init__.py  agents.py  article_writer.py  async_utils.py  cleanup.py  cli.py  config.py  consultant_tools.py  data_block_utils.py  editor_tools.py  enhanced_sentiment_toolkit.py  error_safety.py  exchange_metadata.py  fx_normalization.py  graph.py  health_check.py  ibkr_config.py  liquidity_calculation_tool.py  llm_budgets.py  llm_usage.py  llms.py  macro_context.py  macro_regions.py  main.py  memory.py  observability.py  output.py  persistence.py  prompts.py  report_generator.py  retrospective.py  runtime_diagnostics.py  runtime_services.py  sector_normalization.py  stocktwits_api.py  tavily_utils.py  thesis_visualizer.py  ticker_corrections.py  ticker_policy.py  ticker_utils.py  (+4 more)
src/agents/: __init__.py  analyst_nodes.py  consultant_nodes.py  decision_nodes.py  message_utils.py  output_limits.py  output_validation.py  research_nodes.py  runtime.py  state.py  support.py
src/charts/: __init__.py  base.py  chart_node.py
src/data/: alpha_vantage_fetcher.py  eodhd_fetcher.py  fetcher.py  fmp_fetcher.py  gap_fill.py  interfaces.py  merge_policy.py  metric_extraction.py  source_fetchers.py  validator.py
src/eval/: __init__.py  baseline_capture.py  baseline_suite.py  capture_contract.py  capture_validation.py  constants.py  execution_profile.py  git_meta.py  llm_capture_meta.py  prompt_checks.py  prompt_digest.py  prompt_provenance.py  scenario_catalog.py  semantic_judge.py  serialization.py
src/graph/: __init__.py  builder.py  components.py  routing.py  tool_nodes.py
src/ibkr/: __init__.py  account_service.py  analysis_index.py  cli_options.py  client.py  dip_watch.py  exceptions.py  models.py  opportunity_finder.py  order_builder.py  portfolio.py  portfolio_data_service.py  portfolio_health.py  portfolio_presentation.py  position_evaluator.py  recommendation_service.py  reconciler.py  reconciliation_rules.py  refresh_service.py  screening_freshness.py  security_data_service.py  throttle.py  ticker.py  ticker_mapper.py  types.py  watchlist_evaluator.py
src/mcp/: auth.py  budget.py  catalog.py  client.py  config.py  errors.py  normalize.py  session_cache.py
src/tooling/: __init__.py  audit.py  escalating_inspector.py  (+8 more)
terraform/: main.tf  variables.tf
tests/: conftest.py  test_agent_memory_execution.py  test_agents.py  test_article_writer.py  test_async_utils.py  test_attribution.py  test_capital_efficiency.py  test_chart_extractors.py  test_chart_layout_fixes.py  test_cleanup.py  test_cli.py  test_company_name_resolution.py  test_config.py  test_consultant_edge_cases.py  test_consultant_integration.py  test_consultant_tools.py  test_contamination_vectors.py  test_content_ingress_coverage.py  test_data_block_utils.py  test_data_fetcher.py  test_data_hygiene.py  test_data_quality_improvements.py  test_data_validator.py  test_editor.py  test_env_override_warning.py  test_eodhd_fetcher.py  test_error_safety.py  test_fetcher_inflight_cleanup.py  test_filings.py  test_fmp_fetcher.py  test_football_field.py  test_foreign_language_analyst.py  test_forensic_data_block.py  test_fragile_valuation.py  test_fx_backwards_compatibility.py  test_fx_normalization.py  test_graham_earnings.py  test_graph_execution.py  test_graph_workflow_integration.py  test_health_check.py  (+66 more)
(+227 files in other folders)
