[tool.poetry]
name = "multi-agent-trading-system"
version = "3.1.0"
description = "A sophisticated multi-agent trading analysis system using LangGraph 1.x and Gemini 3"
authors = ["Trading System Team <team@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
# Python version compatibility
python = ">=3.10,<3.13"

# Core LangChain & LangGraph
langchain = ">=1.0.0,<2.0.0"
langchain-core = ">=1.0.0,<2.0.0"
# CRITICAL FIX: Required for Tavily and other tools
langchain-community = ">=0.2.0,<1.0.0"
# Primary LLM: Google Gemini
langchain-google-genai = ">=2.0.0,<3.0.0"
# ADDED: Google GenAI SDK for direct access if needed
google-genai = ">=1.0.0,<2.0.0"
# OPTIONAL: OpenAI for consultant node (cross-validation)
# The consultant node uses OpenAI to provide independent review of Gemini analysis
langchain-openai = {version = ">=0.3.0,<1.0.0", optional = true}
langgraph = ">=1.0.0,<2.0.0"
langgraph-checkpoint = ">=3.0.0,<4.0.0"

# LangSmith
langsmith = ">=0.2.0,<1.0.0"

# Tavily
langchain-tavily = ">=0.2.0,<1.0.0"
tavily-python = ">=0.5.0,<1.0.0"

# Financial data
yfinance = ">=0.2.40"
# ADDED: yahooquery for multi-source fallback
yahooquery = ">=2.3.0"
finnhub-python = ">=2.4.20"
stockstats = ">=0.6.2"
pandas = ">=2.2.0,<3.0.0"

# Vector database
chromadb = ">=0.5.0,<1.0.0"

# HTTP and async
aiohttp = ">=3.10.0,<4.0.0"
requests = ">=2.32.0,<3.0.0"
httpx = ">=0.27.0,<1.0.0"

# Utilities
rich = ">=13.9.0,<14.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
structlog = ">=24.4.0,<25.0.0"
tenacity = ">=9.0.0,<10.0.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"

# Scientific computing
numpy = ">=2.0.0,<3.0.0"
pydantic = ">=2.10.0,<3.0.0"

# Optional integrations
opentelemetry-api = {version = ">=1.28.0,<2.0.0", optional = true}
opentelemetry-sdk = {version = ">=1.28.0,<2.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0,<9.0.0"
pytest-cov = ">=6.0.0,<7.0.0"
pytest-asyncio = ">=0.24.0,<1.0.0"
pytest-mock = ">=3.14.0,<4.0.0"
black = ">=24.10.0,<25.0.0"
ruff = ">=0.8.0,<1.0.0"
mypy = ">=1.13.0,<2.0.0"
pre-commit = ">=4.0.0,<5.0.0"
ipython = ">=8.30.0,<9.0.0"

[tool.poetry.extras]
observability = ["opentelemetry-api", "opentelemetry-sdk"]
consultant = ["langchain-openai"]  # Enable external consultant for cross-validation

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"