[tool.poetry]
name = "multi-agent-trading-system"
version = "3.1.0"
description = "A sophisticated multi-agent trading analysis system using LangGraph 1.x and Gemini 3"
authors = ["Trading System Team <team@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
# Python version compatibility
python = ">=3.11,<3.13"

# Core LangChain & LangGraph
langchain = ">=1.0.0,<2.0.0"
langchain-core = ">=1.0.0,<2.0.0"
# CRITICAL FIX: Required for Tavily and other tools
langchain-community = ">=0.4.0,<1.0.0"
# Primary LLM: Google Gemini
langchain-google-genai = "^4.0.0"
# ADDED: Google GenAI SDK for direct access if needed
google-genai = ">=1.0.0,<2.0.0"
# OPTIONAL: OpenAI for consultant node (cross-validation)
# The consultant node uses OpenAI to provide independent review of Gemini analysis
langchain-openai = ">=1.0.0,<2.0.0"
# Writer LLM: Anthropic Claude (falls back to Gemini if CLAUDE_KEY not set)
langchain-anthropic = ">=0.3.0,<1.0.0"
langgraph = ">=1.0.0,<2.0.0"
langgraph-checkpoint = ">=3.0.0,<4.0.0"

# LangSmith
langsmith = ">=0.2.0,<1.0.0"

# Tavily
langchain-tavily = ">=0.2.0,<1.0.0"
tavily-python = ">=0.5.0,<1.0.0"

# Financial data
yfinance = ">=1.0"  # yfinance 1.0 released Dec 2025
# ADDED: yahooquery for multi-source fallback
yahooquery = ">=2.3.0"
finnhub-python = ">=2.4.20"
stockstats = ">=0.6.2"
pandas = ">=2.2.0,<3.0.0"

# Vector database
chromadb = "^1.3.0"

# HTTP and async
aiohttp = ">=3.10.0,<4.0.0"
requests = ">=2.32.0,<3.0.0"
httpx = ">=0.27.0,<1.0.0"

# Utilities
rich = "^14.2.0"
python-dotenv = ">=1.0.0,<2.0.0"
structlog = "^25.5.0"
tenacity = ">=9.0.0,<10.0.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"

# Scientific computing
numpy = ">=2.0.0,<3.0.0"
pydantic = ">=2.10.0,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"

# Optional integrations
opentelemetry-api = {version = ">=1.28.0,<2.0.0", optional = true}
opentelemetry-sdk = {version = ">=1.28.0,<2.0.0", optional = true}
urllib3 = "^2.6.2"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
langfuse = "^3.12.1"
openpyxl = "^3.1.5"
xlrd = "^2.0.2"
lxml = "^6.0.2"
duckduckgo-search = ">=7.0.0,<9.0.0"
edinet-tools = {version = ">=0.2.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
pytest-mock = ">=3.14.0,<4.0.0"
black = "^25.12.0"
ruff = ">=0.8.0,<1.0.0"
mypy = ">=1.13.0,<2.0.0"
pre-commit = ">=4.0.0,<5.0.0"
ipython = "^9.8.0"
pytest-env = "^1.2.0"

[tool.poetry.extras]
observability = ["opentelemetry-api", "opentelemetry-sdk"]
consultant = ["langchain-openai"]  # Enable external consultant for cross-validation
writer = ["langchain-anthropic"]  # Claude-based article writer
filings = ["edinet-tools"]  # Japan EDINET filing API

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E701",  # Multiple statements on one line - used intentionally in dispatch tables
    "E402",  # Module level import not at top - intentional in some files
    "B008",  # Function call in default argument
    "C901",  # Function too complex
]

[tool.ruff.lint.per-file-ignores]
# health_check.py imports modules to verify they're installed
"src/health_check.py" = ["F401"]
# Tests often have unused variables for side effects (patches, mocks)
# F401: Imports for availability checks (try/except ImportError pattern)
"tests/*.py" = ["F841", "F401"]
"tests/**/*.py" = ["F841", "F401"]
# Examples may have demonstration code
"examples/*.py" = ["B018"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# Comprehensive options moved from pytest.ini
addopts = """
    --strict-markers
    --strict-config
    --verbose
    --tb=short
    --durations=10
    --maxfail=5
    -p no:cacheprovider
"""

# Register custom markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as performance benchmarks",
    "memory: marks tests that require memory/ChromaDB",
    "llm: marks tests that require LLM connectivity",
    "api: marks tests that require external API access",
    "asyncio: marks tests as asyncio",
]

# Filter out warnings from third-party libraries
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # langchain_tavily field shadowing warnings (third-party, cannot fix)
    "ignore:Field name \"output_schema\" in \"TavilyResearch\":UserWarning",
    "ignore:Field name \"stream\" in \"TavilyResearch\":UserWarning",
]

[tool.pytest_env]
ENVIRONMENT = "test"
LOG_LEVEL = "DEBUG"
ENABLE_MEMORY = "false"
ONLINE_TOOLS = "false"
DEFAULT_TICKER = "TEST"
